--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">August 2016 - August 2020</div>
-                            <h2>Undegraduate stduent - BMSIT</h2>
+                            <h2>Undegraduate Student - BMSIT</h2>
                             <h4>Visvesvaraya Technological University (VTU) - India</h4>
                             <h4>GPA: 8.0 / 10.0</h4>
                             <p>
