--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </div>
                             <div class="hero-btn">
                                  <a class="btn" href="https://www.linkedin.com/in/desaivishwas/" target="_blank">linked <i class="fab fa-linkedin-in"></i></a>
-                                 <a class="btn" href="Vishwas_Desai_Resume.pdf" target="_blank">resume</a>
+                                 <a class="btn" href="Vishwas_Desai_Resume_.pdf" target="_blank">resume</a>
                             </div>  
                         </div>
                     </div>
