--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
                 <a href="index.html" class="navbar-brand"></a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+              <!--  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
+                -->
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <button onclick="myFunction()" ><i class="fas fa-toggle-on"></i></button>
                     <div class="navbar-nav ml-auto">
